syntax = "proto3";

package auth;

// Services
service AuthService {
  rpc LoginUser(LoginRequest) returns (LoginResponse);
  rpc ReigsterUser(RegisterRequest) returns (RegisterResponse);
}

// Requests body
message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RequestVerifyToken { string token = 1; }

// Responses body
message LoginResponse { string token = 1; }
message RegisterResponse { string token = 1; }
message VerifyTokenResponse {
  string _id = 1;
  string name = 2;
  string username = 3;
  repeated UserPermissions permissions = 4;
}

message UserPermissions {
  string type = 1;
  string _id = 2;
  UserPermission perms = 3;
}

message UserPermission {
  bool light = 1;
  bool thermostat = 2;
  bool camera = 3;
}