syntax = "proto3";

package user;

// Methods
service UserService {
  rpc FindUserByUsername(FindUserByUsernameRequest) returns (UserResponse) {};
  rpc FindUserById(FindUserByIdRequest) returns (UserResponse) {};
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {};
}
// Requests
message FindUserByUsernameRequest { string username = 1; }
message FindUserByIdRequest { string id = 1; }
message CreateUserRequest {
  string username = 1;
  string name = 2;
  string password = 3;
}
message UpdateUserRequest {
  string id = 1;
  optional string name = 2;
  optional string username = 3;
  optional string password = 4;
}
// Responses
message UserResponse {
  int32 code = 1;
  optional string message = 2;
  optional User user = 3;
}

message CreateUserResponse {
  int32 code = 1;
  optional string message = 2;
  optional User user = 3;
}
message UpdateUserResponse {
  int32 code = 1;
  optional string message = 2;
  optional User user = 3;
}

// Types
message User {
  string id = 1;
  string name = 2;
  string username = 3;
  string password = 4;
  repeated Permissions permissions = 5;
}

message Permissions {
  string id = 1;
  string type = 2;
  Permission perms = 3;
}

message Permission {
  bool light = 1;
  bool thermostat = 2;
  bool camera = 3;
}